# ChangeLog for dev-cpp/gflags
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.20 2013/08/04 13:41:29 pinkbyte Exp $

  04 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
  Stable on amd64 and x86, wrt bug #479720

  16 Dec 2012; Pacho Ramos <pacho@gentoo.org> -gflags-1.7.ebuild, metadata.xml:
  Drop maintainer due retirement, #95685

  19 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> gflags-2.0.ebuild:
  Keyworded ~amd64-linux and ~x86-linux

  03 Mar 2012; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.5.ebuild,
  -gflags-1.6.ebuild:
  Remove old versions.

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,
  gflags-1.6.ebuild, gflags-1.7.ebuild, gflags-2.0.ebuild:
  Touch up style -- no functional changes.

*gflags-2.0 (16 Feb 2012)
*gflags-1.7 (16 Feb 2012)

  16 Feb 2012; Krzysztof Pawlik <nelchael@gentoo.org> +gflags-1.7.ebuild,
  +gflags-2.0.ebuild:
  Version bumps.

  11 Nov 2011; Mike Frysinger <vapier@gentoo.org> gflags-1.5.ebuild,
  gflags-1.6.ebuild:
  Add arm love.

*gflags-1.6 (01 Sep 2011)

  01 Sep 2011; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.4.ebuild,
  +gflags-1.6.ebuild:
  Version bump.

*gflags-1.5 (12 Feb 2011)

  12 Feb 2011; Krzysztof Pawlik <nelchael@gentoo.org> -gflags-1.2.ebuild,
  +gflags-1.5.ebuild:
  Version bump.

  08 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org> metadata.xml:
  Improve metadata: add no-herd and my name.

*gflags-1.4 (08 Nov 2010)

  08 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org> +gflags-1.4.ebuild,
  metadata.xml:
  Version bump, Python library has been split off to separate package:
  dev-python/python-gflags.

  09 Jul 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update metadata.xml. antarus is staffer now (#119161)

  29 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gflags-1.2.ebuild:
  Set SUPPORT_PYTHON_ABIS (bug #312131).
