@@ -1,15 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD pyh2o-9999.ebuild 690 SHA256 e1202c14b83109aca24da6f0a86d6d9cdd2546d446ce8dd0ff96cfc1fdccae12 SHA512 53d275927b6e4f4483b2b4f19523ed3fe37ed42b4c9172fe9f507176013b73bfe923b8829c3b25afe2438a0539dda87899299ec5e66e5b02dddac3945ecc81b2 WHIRLPOOL 422f378c0e5058ac120c14df038784c0bcf38a20c28ffaa7006afac7d9153f04fcd6d5240b6448df607a2a27580ff8480fb3a1b0984a8b231b08e82c1b3a15be
-MISC ChangeLog 506 SHA256 4d992a75f04cd5f047b6ec6c66285a940d7c99869c19565879cec0a07e214aae SHA512 d010b4430ad8ebff2ecdf49fe333ff5054eb066af0c8f03884620b1058c99a444cad825b62182b3c449090acc5e9a1c0ba048c617a19c508a45422afc1f86676 WHIRLPOOL b82e6f0f21a42ab900dad3c989a323fde214f105702277cfa297ebae225a85b11bf3b6a7e958cd36f0beaf14908e1f4102c8d24cb7d049beb20cb4aa14f925ac
+EBUILD pyh2o-9999.ebuild 749 SHA256 a13d74ed9dcdf9259176de95cb5c4f96f941fbdb9a4cdf93ffbe7448222b2b71 SHA512 5934c065a0d489383d83f00957753c8797eb9b9930d2746a5ac86d178d6881d8ea06876495a8f8641d69f6d8c25cdf5c3d08fef5bb66fd47d50307da105696f2 WHIRLPOOL 5e6563789e43dacd05c1e845d07b5d4ad014f24a810009ddb6c66a10c0567397c3e06086b65215e413af0b9d7ae908a765ad8f8c55589816649a418ec3482e96
+MISC ChangeLog 619 SHA256 a10ae85cc533e8a774245f82d5ea9044438311502a1cc2b1f389c0bb85a9d774 SHA512 f2dcf42112be996127af9c028594f1642d74363632edd988df73d073cb1bb997119210f1f7d15e7306d752b6895d650fed476456eadca7d661b7165813e4a956 WHIRLPOOL f97e41d4f1b18231ef39eede6b579ee29ed84adc5e5af017855952a7b4ba143ae713c833c5d0509486ba4a9f0d5e59ed7e38601e7a45126fc5c18e00e892cbcb
 MISC metadata.xml 436 SHA256 a09655b3f25fb0354b1d20b27c6f620f8330847defbf75702045787d80287575 SHA512 d3be54e204c6a9b46f737a8a93c8c59ffffe0f5b3f13520b28fe46aa9ac61018b94d71ef526436e3ff98e4e5a23e05b75b3b32e27014f1971e358be49de22d52 WHIRLPOOL 4f7569418fefa51b885ab20ed900cd25439c72c464fb43226793284ace07b30e4c50218cf419f7244348dfb2aa8667ebda783e2452e3f7e51536c45463483767
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlDPeW4ACgkQfXuS5UK5QB3KhAP+Oi7y4VvMYrQbN1zT1DvCvnYS
-FsOCcwiJ/Kxu4quYZUOsdXjs4YJ2NX6ABevwi/SuVCr3seciqDzAWC9JxpDtOfYb
-W3Li0bmsg8YXWKpmMQiyJB+AWgUpQ8veDa7Q3Td+Ah+VBvYOElRKJT9IZWzpYVq6
-nogG0ZD2s0otEEACq/o=
-=wYRO
+iQJ8BAEBCABmBQJSAhPaXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGRDhEM0MyMERDMzNBMkYzQzJFRTI3QjE5
+NjI3RjQ1NkY5REE3NjQzAAoJEJYn9Fb52nZDap4P/2g97cEZbzdGE/prPFL1nKGa
+mNAtEx/Jd2P6OgHBjvM/BTYXU7c6CCHmJq+2I+tKOny297H6/dCoCiv5PwLYdlm1
+iUnxc50nqrkxUFbi/Oe+0+5rV9Gd4J2CreDnCDxqL8JLONxnzVFepT2wYDdI9Ee6
+tXxNo+7S8V3bbnF60yGW9vs22v8XuHO5bamnX5Qjjg+bfFb9QGFcNJm+jec9+xXa
+34uV16VXmzwKbkGk6+xRaM7Q7tp5aOMaTLzwP1XrSxb/fRjaBuB8SERiTwBfGmol
+Y38JyIFA2rNe+HD4C8lAsPWhs+h8c8o+Bk6gHPo1MnnX5gxcSXRf/jEpZpnqXU2e
++YqIjYXrgxS8/vejOfgJyvELmvm5CrqA9Nj7HCdeXD5Nh52SCB44rQSR4dK5g2Th
++tBE3YYlluyfpeDRZGN67640yo3iMjR9V94INaJpJ90qxgab6+N0GguiX/Kc+4r5
+MuHH5K8uoHlG2ztgOVmq3SNHzbjFD8xYf6AlgXalxm4jZfjWYalLs3dP4siMZqTc
+fhHuJ5IuJwtjDf6qSiaKMawH4hvCc8V7GHj+yyAtuWKqKtzRJ/vYrQur+elh9GH3
+/lHHMTA08KtqiaDHDYOdUcoGbF8TQpUGfj4iveUMEYraI7cbKuBT9VjPifEzib7h
+3345qR76iIss59uHlj76
+=BtFI
 -----END PGP SIGNATURE-----
