@@ -1,9 +1,9 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyh2o/pyh2o-9999.ebuild,v 1.2 2012/12/17 19:58:35 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyh2o/pyh2o-9999.ebuild,v 1.3 2013/08/07 09:30:32 mgorny Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2,3_3} pypy{1_8,1_9} )
+PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2,3_3} pypy{1_8,1_9,2_0} )
 
 inherit distutils-r1
 
@@ -22,6 +22,9 @@ LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
+
+RDEPEND=">=sci-libs/libh2o-0.2.1"
+DEPEND="${RDEPEND}"
 
 #if LIVE
 KEYWORDS=
