@@ -3,8 +3,8 @@ DESCRIPTION=Google's C++ argument parsing library
 EAPI=3
 HOMEPAGE=http://code.google.com/p/gflags/
 IUSE=static-libs
-KEYWORDS=amd64 ~arm x86 ~amd64-linux ~x86-linux
+KEYWORDS=amd64 arm x86 ~amd64-linux ~x86-linux
 LICENSE=BSD
 SLOT=0
 SRC_URI=http://gflags.googlecode.com/files/gflags-2.0.tar.gz
-_md5_=f96740fa169afbb83f7d88444904d856
+_md5_=2f6e239cdbe979a4b2a78b24ef6d9f95
