@@ -3,10 +3,10 @@ DEPEND=dev-libs/apr:1 dev-libs/apr-util:1 dev-libs/openssl sys-libs/zlib || ( >=
 DESCRIPTION=HTTP client library
 EAPI=5
 HOMEPAGE=http://code.google.com/p/serf/
-KEYWORDS=~alpha amd64 ~arm hppa ia64 ~mips ~ppc ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~ppc-macos ~x64-macos
+KEYWORDS=~alpha amd64 arm hppa ia64 ~mips ~ppc ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~ppc-macos ~x64-macos
 LICENSE=Apache-2.0
 RDEPEND=dev-libs/apr:1 dev-libs/apr-util:1 dev-libs/openssl sys-libs/zlib
 SLOT=1
 SRC_URI=http://serf.googlecode.com/files/serf-1.2.1.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=6fbeb29735740e7bc1c0b35308516747
+_md5_=14619cb65928efe60fa368d1230c088e
