@@ -9,13 +9,17 @@ DIST serf-1.2.1.tar.bz2 190464 SHA256 6988d394b62c3494635b6f0760bc3079f9a0cd380b
 EBUILD serf-0.7.2.ebuild 1004 SHA256 e21296ec0b58fcccbba893b4cab7724b46a512151a65e0861cc3a7d54130dbd9 SHA512 12989796f24f8888a02ac3da31bf1eca2ba2c26990dde8d2387eb0e5102f146ace2a7e4f50c6a7d3408038931e9d8fb5a512bc17dd2ed4ff12499d84fd217f36 WHIRLPOOL 2d3517267dabbb56983e9580beb3053a8a012d118d046cb4099b3bdf33cf9322cf0a0472c3a17406ec9fcaf7bf919c5ace42c64861711c123da7c64744099892
 EBUILD serf-1.1.1.ebuild 1084 SHA256 9a6945f0b46d496b391dc12b5963eb4fc4d5a2991929d98cf0e03791d76c671f SHA512 b51e601b24a3842713160dfb1c7820269a6cd4b104d381041cd39eded5264e4ef1ead863467e362071f82142ad1f7e490f78e14e00cc79933827288a739e20f0 WHIRLPOOL cb70bda3d799eb29ecc3b909371b1866a8597c6748af8c8a53c3f796d4248325eb4dd082c67660b464a1cf793242265203f1cda8e3e4ba81c0b227e69358fd1d
 EBUILD serf-1.2.0.ebuild 995 SHA256 0ab0ab24a9cef1a68c299133300e84e442a49e6e8f622f372198273abacf63e3 SHA512 69de3573f9594076d4a186c0aecb03c566cbee09bda09dc2a467e00862970ca63d60bafd07e0741d1fbe9b15a4b1bb1d392c4f0a8a2c1b5d7a4cb859ac9ede1e WHIRLPOOL 9a60022a8d092cc45bbb9cd5df85ebb54b52165d2c1521ac3929b5393a440dca6b01cf23c3a9d1c5248c77da5902979331a8166d53e4c61c34b92c5dbe70d635
-EBUILD serf-1.2.1.ebuild 1001 SHA256 660f9ecbe36534d77962853f85090bb51e2d94852d496ad941170d2227a213f0 SHA512 894c4e5a8885aaa0257971a1fe15ca3674171f5d55cfb318f578c23b63684a6c3843538eaba1d3484e9e5aff8d05ac386065d1cbdcc687965aec3cbe8e5144a1 WHIRLPOOL 780c6a60f82278feef0c752a5f2ce7cf6213295c8300b42a018b62628235db738b83df5b06b3d6fdb7d94182d69162fc4d73ef12bcca4e58ac75853c0b8356c8
-MISC ChangeLog 11192 SHA256 32a3e3e9c4e752a03d639597bc3541ec716610799e4565be68eed24aebb421fb SHA512 4ca752bdd73af02ae86cb1c582e4357587f4460eaa24c46ef70d2f9741103f2f39b5cf5a827b01325141fb4f0504242c1e7834b9cf575bd303d5903f93c05284 WHIRLPOOL 655f9a04bde9aec0264b830ff2659266e66a4d1a64b8735bb5a580a4636d4073987b88713197bb3f8e8dd2a649bdca3049f7c048b823c03efaf83faaed47289a
+EBUILD serf-1.2.1.ebuild 1005 SHA256 2f7d1de7d496e77d12c1a132af09e911825bd65bf6ccc780ae8d210a21796d59 SHA512 386d7dbb9bffb90b1ae9464675d65e6221d9cc46c9323483343822e24efce35f9567e39573c8117525a39aaa32048c7be4079af363c15f353b64b355ded1c6ba WHIRLPOOL 2ebddb213b0c3cc5e4c846127d3ea11d8b2a82e740842ff52d3391c83b3a170ab991158ac93a4bc5c6d173c5ed2eac5a7770f1834c48dbc3c8b569a7c4bd4e98
+MISC ChangeLog 11300 SHA256 a236ba805539db11f9acaddb04c8206cbd8caf2c5f4095064e56eb1c88d9519e SHA512 19180ba2c852e270c543972a997f3f3968db018f299f4f602665535e30ed8fe5879979b776e1847dfe7886464e9c53f3b9803e410dfa0d6b0909e93534fbfe40 WHIRLPOOL 000df2d5c76df36c60405c53821920604430e0ce06764cb0fad016f35fd743dba00ef86178a73fbf6cc659a4433b84262a325783475d547fd96d9c0bd5a2273b
 MISC metadata.xml 314 SHA256 8c4f67c5ad4fce7c5eadc49ad4914bdf167df690c4475af52955c85557654883 SHA512 c20509634f287dcc7657b9cce28797e2fd5ca7a31f253eb9d7720bb90a51ac5f9fee94581edc4f0316730e9f4d7b8f32db792bcbd541248bc6c6d0db52093445 WHIRLPOOL 6d114fd80428a8e04002a513a09df4b8428c2fbd9cd0a1b83b9e05e813d964124e635a74fefdf844567860182107e7067a06a1549bee84eec219f4e205f4c3a7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIBL2MACgkQVWmRsqeSphN0FwCeOgeDjFC1OH+Ds8/eeKLEM4wy
-KxkAnRuzLGHwkvsIuXcVISfwAmLn6nCK
-=H3yS
+iQEcBAEBCAAGBQJSAg7mAAoJECo/aRed9267BZYH/04sp1km7O+XwbjGHZdM2V0h
+kE3jaFzNCIbgmBRuJEPEFGJTpT/gaJMJoOduQdH8nXlGi6IUBi3V7tDSRUoh3lfE
+Iu6DQrmpuM01+7zuo+IZDNw5wNrKTdfst/vcvU19G3GIG2V/dtP4NdlbFY4AjHa+
+8b2OP07Q+XvEpga/f6cY+DBF4T63PfiWpxNYsSTl/1dtlUQyW3/51CAsm/dBTHuA
+1Kub+qo3dOjaIQxiV1dtG2rfzCwv9/dqSaYeiot1XqHhFl0LCEEUyVUquGKZ3mJa
+KgpIdvIR/UxSdhXEoWD056XaHBQZjjplVdKMBfb0KgoG3EVLQfUiRQbMuf5t3kI=
+=IfeH
 -----END PGP SIGNATURE-----
