@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyh2o
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyh2o/ChangeLog,v 1.2 2012/12/17 19:58:35 mgorny Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyh2o/ChangeLog,v 1.3 2013/08/07 09:30:32 mgorny Exp $
+
+  07 Aug 2013; Michał Górny <mgorny@gentoo.org> pyh2o-9999.ebuild:
+  Add the missing dep, and enable pypy2.0.
 
   17 Dec 2012; Michał Górny <mgorny@gentoo.org> pyh2o-9999.ebuild:
   Bump to EAPI=5 to make Paludis happy, bug #447524.
