@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gflags
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.20 2013/08/04 13:41:29 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.21 2013/08/07 09:24:24 pinkbyte Exp $
+
+  07 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
+  Stable on arm, wrt bug #479720
 
   04 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
   Stable on amd64 and x86, wrt bug #479720
